manifests/arch-qbittorrent/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-qbittorrent
  namespace: jovian-prod
  labels:
    app: arch-qbittorrent
    service: media-backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: arch-qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: arch-qbittorrent
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: arch-qbit
        image: binhex/arch-qbittorrentvpn
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
          capabilities:
            add:
            - 'NET_ADMIN'
        volumeMounts:
        - name: config
          mountPath: /config
        - name: nfs-media
          mountPath: /nfs-media
        - name: dev-net-tun
          mountPath: /dev/net/tun
        ports:
        - containerPort: 8081
          name: archqbitt-http
          protocol: TCP
        resources:
          requests:
            memory: "4Gi"
            cpu: "500m"
          limits:
            memory: "12Gi"
            cpu: "2000m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: arch-qbittorrent-pvc
          readOnly: false
      - name: nfs-media
        persistentVolumeClaim:
          claimName: arch-qbittorrent-smb-media-pvc
      - name: dev-net-tun
        hostPath:
          path: /dev/net/tun
      - name: wg-conf
        secret:
          secretName: qbittorrent-wg-conf
