manifests/arch-qbittorrent/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-qbittorrent-service
  namespace: jovian-prod
spec:
  selector:
    app: arch-qbittorrent
  ports:
    - port: 8081
      targetPort: archqbitt-http
      protocol: TCP
      name: archqbitt-http
